--- a/src/pages/analytics.css
+++ b/src/pages/analytics.css
@@ -1,3 +1,4 @@
+@import url('../vendor/fonts.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/_theme_light/header_theme_light.css');
