background color of the inactive bar removed

--- a/src/blocks/table/__histogram-value/table__histogram-value.css
+++ b/src/blocks/table/__histogram-value/table__histogram-value.css
@@ -1,6 +1,6 @@
 .table__histogram-value-container {
     width: calc(100% - 104px);
-    background: #ddd;
+    /*background: #ddd;*/
 }
 
 .table__histogram-value {
