--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: 1px solid green;
+    /*border: 1px solid green;*/
 }
 
 @media screen and (min-width: 481px) and (max-width: 1024px) {
