--- a/src/blocks/search-result/search-result.css
+++ b/src/blocks/search-result/search-result.css
@@ -2,7 +2,7 @@
     padding: 80px 0;
     width: 100%;
     /*height: 282px;*/
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
 .hide {
