--- a/src/blocks/result/__image/result__image.css
+++ b/src/blocks/result/__image/result__image.css
@@ -2,4 +2,7 @@
     width: 100%;
     height: 272px;
     object-fit: cover;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    overflow: hidden;
 }
