--- a/src/blocks/result/__text/result__text.css
+++ b/src/blocks/result/__text/result__text.css
@@ -1,10 +1,11 @@
 .result__text {
     margin: 0;
-    padding: 16px 0 0 24px;
+    padding: 16px 24px 0 24px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 22px;
+    word-wrap: break-word;
     color: #1A1B22;
 }
