--- a/src/blocks/result/__title/result__title.css
+++ b/src/blocks/result/__title/result__title.css
@@ -1,6 +1,6 @@
 .result__title {
     margin: 0;
-    padding: 12px 0 0 24px;
+    padding: 12px 24px 0 24px;
     font-family: 'Roboto Slab', serif;
     font-style: normal;
     font-weight: normal;
