--- a/src/blocks/footer/__link/footer__link.css
+++ b/src/blocks/footer/__link/footer__link.css
@@ -5,4 +5,9 @@
     font-size: 18px;
     line-height: 24px;
     color: #1a1b22;
+    transition: all 0.15s ease-out;
+}
+
+.footer__link:hover {
+    color: #999;
 }
