--- a/src/blocks/statistics/__link/statistics__link.css
+++ b/src/blocks/statistics/__link/statistics__link.css
@@ -7,10 +7,15 @@
     font-size: 18px;
     line-height: 24px;
     color: rgba(26, 27, 34, 0.5);
+    transition: all 0.15s ease-out;
 }
 
 .statistics__link::before {
     /*content: "&nbsp;/&nbsp;";*/
     content: " / ";
     white-space: pre;
+}
+
+.statistics__link:hover {
+    color: #777;
 }
