color bar removed

--- a/src/blocks/technology/__item-title/technology__item-title.css
+++ b/src/blocks/technology/__item-title/technology__item-title.css
@@ -10,4 +10,9 @@
     letter-spacing: 0.2px;
     color: #1A1B22;
     /*border: 1px solid green;*/
+    transition: all 0.15s ease-out;
+}
+
+.technology__item-link:hover .technology__item-title  {
+    color: #b6bcbf;
 }
