--- a/src/blocks/commit/commit.css
+++ b/src/blocks/commit/commit.css
@@ -11,7 +11,7 @@
     min-height: 288px;
     padding: 24px;
     box-sizing: border-box;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
 @media screen and (min-width: 481px) and (max-width: 960px) {
