--- a/src/blocks/commit/commit.css
+++ b/src/blocks/commit/commit.css
@@ -10,8 +10,16 @@
     width: 400px;
     min-height: 288px;
     padding: 24px;
+    margin-bottom: 10px;
     box-sizing: border-box;
     /*border: 1px solid red;*/
+    background-color: #fff;
+    border-radius: 16px;
+}
+
+.commit:hover {
+    /*transform: translateY(-4px);*/ 
+    box-shadow: 0 4px 8px rgba(14,21,47,.1), 0 2px 24px rgba(14,21,47,.08);
 }
 
 @media screen and (min-width: 481px) and (max-width: 960px) {
