--- a/src/blocks/result/__author/result__author.css
+++ b/src/blocks/result/__author/result__author.css
@@ -1,6 +1,6 @@
 .result__author {
     margin: auto 0 0 0;
-    padding: 10px 0 24px 24px;
+    padding: 10px 24px 24px 24px;
     font-family: 'Roboto Slab', serif;
     font-style: normal;
     font-weight: bold;
@@ -9,4 +9,16 @@
     letter-spacing: 0.4px;
     text-transform: uppercase;
     color: #B6BCBF;
+}
+
+@media screen and (min-width: 481px) and (max-width: 960px) {
+    .result__author {
+        padding: 10px 16px 16px 16px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .result__author {
+        padding: 5px 16px 20px 16px;
+    }
 }
