--- a/src/blocks/result/__title/result__title.css
+++ b/src/blocks/result/__title/result__title.css
@@ -8,3 +8,19 @@
     line-height: 30px;
     color: #1A1B22;
 }
+
+@media screen and (min-width: 481px) and (max-width: 960px) {
+    .result__title {
+        padding: 12px 16px 0 12px;
+        font-size: 22px;
+        line-height: 24px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .result__title {
+        padding: 16px 16px 0 16px;
+        font-size: 22px;
+        line-height: 28px;
+    }
+}
