--- a/src/blocks/result/result.css
+++ b/src/blocks/result/result.css
@@ -20,8 +20,26 @@
 
 .result:hover {
     transform: translateY(-10px);
-    /*box-shadow: 0 10px 58px rgba(8, 29, 45, 0.1);*/
     box-shadow: 0 8px 14px rgba(14,21,47,.1), 0 2px 36px rgba(14,21,47,.08);
-    /*background: rgba(8, 29, 45, 0.1);
-    filter: blur(58px);*/
+}
+
+@media screen and (min-width: 481px) and (max-width: 960px) {
+    .result {
+        min-height: 420px;
+    }
+
+    .result:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 4px 7px rgba(14,21,47,.1), 0 1px 18px rgba(14,21,47,.08);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .result {
+        min-height: 446px;
+    }
+    .result:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 4px 7px rgba(14,21,47,.1), 0 1px 18px rgba(14,21,47,.08);
+    }
 }
