--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -1,11 +1,16 @@
 .results {
+    margin: 0px;
     padding: 80px 104px;
+    background-color: #f5f6f7;
+    /*background-color: #999;*/
     /*width: 100%;*/
 /*    display: flex;
     flex-direction: column;*/
+    position: relative;
+    box-sizing: border-box;
 }
 
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 960px) {
     .results {
         padding: 40px;
     }
