--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -3,6 +3,7 @@
     height: 576px;
     background-position: center center;
     background-image: url(../../images/georgia-de-lotz--UsJoNxLaNo-unsplash.jpg);
+    /*background-image: url("<% =require('./../../images/georgia-de-lotz--UsJoNxLaNo-unsplash.jpg') %>");*/
     background-size: cover;
 }
 
