--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,3 +1,4 @@
+@import url('../blocks/body/body.css');
 @import url('../vendor/fonts.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/header/header.css');
@@ -7,9 +8,13 @@
 @import url('../blocks/technology/technology.css');
 @import url('../blocks/about/about.css');
 @import url('../blocks/results/results.css');
+@import url('../blocks/results/_commits/results_commits.css');
 @import url('../blocks/results-header/results-header.css');
+@import url('../blocks/results-header/_commits/results-header_commits.css');
 @import url('../blocks/results-more/results-more.css');
 @import url('../blocks/results-more/_theme_about/results-more_theme_about.css');
 @import url('../blocks/commits/commits.css');
+@import url('../blocks/commits-section/commits-section.css');
+@import url('../blocks/pagination/pagination.css');
 @import url('../blocks/commit/commit.css');
 @import url('../blocks/footer/footer.css');
