--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,4 @@
+@import url('../blocks/body/body.css');
 @import url('../vendor/fonts.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/page/page.css');
