--- a/src/blocks/result/result.css
+++ b/src/blocks/result/result.css
@@ -11,6 +11,7 @@
     padding: 0px;
     min-height: 576px;
     border-radius: 16px;
+    background-color: #fff;
     /*overflow: hidden;*/
     /*border: 1px solid red;*/
     display: flex;
