--- a/src/blocks/about/about.css
+++ b/src/blocks/about/about.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: #fff;
 }
 
 @media screen and (min-width: 481px) and (max-width: 960px) {
