--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: #fff;
     /*border: 1px solid green;*/
 }
 
