--- a/src/blocks/technology/technology.css
+++ b/src/blocks/technology/technology.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: #f5f6f7;
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
