--- a/src/blocks/commit/__avatar/commit__avatar.css
+++ b/src/blocks/commit/__avatar/commit__avatar.css
@@ -3,6 +3,7 @@
     width: 64px;
     height: 64px;
     border-radius: 50%;
+    /*object-fit: contain;*/
 }
 
 @media screen and (min-width: 481px) and (max-width: 960px) {
