invisible css class moved to saeparate file

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -15,7 +15,4 @@
 @import url('../blocks/results-more/results-more.css');
 @import url('../blocks/about/about.css');
 @import url('../blocks/footer/footer.css');
-
-.invisible {
-    display: none;
-}
+@import url('../blocks/invisible/invisible.css');
