--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -18,3 +18,4 @@
 @import url('../blocks/pagination/pagination.css');
 @import url('../blocks/commit/commit.css');
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/invisible/invisible.css');
